--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 asgiref==3.4.1
 autopep8==1.6.0
-configobj==5.0.6
 dj-database-url==0.5.0
 Django==3.2.9
+django-environ==0.8.1
 django-filter==21.1
 django-heroku==0.3.1
 djangorestframework==3.12.4
